Fixed problem with addvanced search link not showing properly. Updated Carto API URL. Attempted Google Map API key change to re-enable the maps. No success with that.

--- a/www/css/vertnet.css
+++ b/www/css/vertnet.css
@@ -352,7 +352,8 @@ input.span2.search {
 
 #search-carat {
 	vertical-align: middle;
-		margin-right: -5px;
+	margin-right: -5px;
+	width: 60px;
 
 }
 
